--- a/home.css
+++ b/home.css
@@ -45,10 +45,10 @@ h2 {
 
 .contact-icons {
   font-size: 30px;
-  position: relative;
+  position: absolute;
   text-align: center;
-  margin-top: 15%;
-  margin-left: 6%;
+  /*margin-top: 15%;*/
+  margin-left: 20%;
 }
 
 .fa {
